somewhat ok but not perfect solution